Update 2-02. 프로그래밍 코드 최적화(02.20).md

--- a/RAP/2-02. 프로그래밍 코드 최적화(02.20).md
+++ b/RAP/2-02. 프로그래밍 코드 최적화(02.20).md
@@ -303,6 +303,7 @@ define view entity ZS4D430_R_Employee              // CDS View Entity 정의 시
 </br>
 
 #### 3) CDS 금액·수량 Semantics 어노테이션 설정
+- 구문법은 DDIC 참조 상속이 약해 `currencyCode: true` 를 명시하고, 신문법은 참조를 자동 상속하므로 보통 생략
 ```abap
 @Semantics.amount.currencyCode: 'Currency'   // Price 필드의 통화코드는 Currency 별칭 필드에 있음
 price      as Price,                        // 금액 필드
@@ -353,6 +354,71 @@ define view entity ZI_Employee
 @EndUserText.quickInfo: 'Date of birth of this employee'  // 필드 툴팁 설명 (가변 길이)
 birth_date as BirthDate,
 ```
+</br>
+</br>
+</br>
+</br>
+
+## < CDS View Entity 어노테이션 생성 절차 >
+</br>
+
+#### 1) 신문법
+
+<img width="522" height="345" alt="image" src="https://github.com/user-attachments/assets/929ae0a9-8f71-4ccb-910e-2a655c56c504" />
+</br>
+
+<img width="527" height="343" alt="image" src="https://github.com/user-attachments/assets/63031994-f5eb-4373-a7d5-07a8c919deca" />
+</br>
+
+```abap
+@AbapCatalog.viewEnhancementCategory: [#NONE]
+@AccessControl.authorizationCheck: #NOT_REQUIRED
+@EndUserText.label: 'Flight CDS View'
+@Metadata.ignorePropagatedAnnotations: true
+define view entity ZCDSFLIGHT_B03 as select from sflight
+{
+    key carrid as Carrid,
+    key connid as Connid,
+    key fldate as Fldate,
+    
+    @Semantics.amount.currencyCode: 'Currency'
+    price as Price,
+    currency as Currency,
+    planetype as Planetype,
+    seatsmax as Seatsmax,
+    seatsocc as Seatsocc,
+    @Semantics.amount.currencyCode: 'Currency'
+    paymentsum as Paymentsum
+}
+```
+</br>
+
+#### 2) 구문법
+```abap
+@AbapCatalog.sqlViewName: 'ZCDSFLT2_B03'
+@AbapCatalog.compiler.compareFilter: true
+@AbapCatalog.preserveKey: true
+@AccessControl.authorizationCheck: #NOT_REQUIRED
+@EndUserText.label: 'Flight CDS View 2'
+@Metadata.ignorePropagatedAnnotations: true
+define view ZCDSFLIGHT2_B03 as select from sflight
+{
+    key carrid as Carrid,
+    key connid as Connid,
+    key fldate as Fldate,
+    
+    @Semantics.amount.currencyCode: 'Currency'
+    price as Price,
+    @Semantics.currencyCode: true
+    currency as Currency,
+    planetype as Planetype,
+    seatsmax as Seatsmax,
+    seatsocc as Seatsocc,
+    @Semantics.amount.currencyCode: 'Currency'
+    paymentsum as Paymentsum
+}
+```
+
 </br>
 </br>
 </br>
