Update 2-02. 프로그래밍 코드 최적화(02.20).md

--- a/RAP/2-02. 프로그래밍 코드 최적화(02.20).md
+++ b/RAP/2-02. 프로그래밍 코드 최적화(02.20).md
@@ -394,6 +394,12 @@ define view entity ZCDSFLIGHT_B03 as select from sflight
 </br>
 
 #### 2) 구문법
+
+<img width="524" height="347" alt="image" src="https://github.com/user-attachments/assets/5cf64edf-b46c-40c5-b8f0-83870c8c6bdb" />
+
+<img width="522" height="310" alt="image" src="https://github.com/user-attachments/assets/9064e92e-2e8e-49eb-81fe-44f75cf12550" />
+
+
 ```abap
 @AbapCatalog.sqlViewName: 'ZCDSFLT2_B03'
 @AbapCatalog.compiler.compareFilter: true
