Update 2-02. 프로그래밍 코드 최적화(02.20).md

--- a/RAP/2-02. 프로그래밍 코드 최적화(02.20).md
+++ b/RAP/2-02. 프로그래밍 코드 최적화(02.20).md
@@ -426,6 +426,27 @@ define view ZCDSFLIGHT2_B03 as select from sflight
 ```
 
 </br>
+
+#### 3) 신문법
+```abap
+@AbapCatalog.viewEnhancementCategory: [#NONE]
+@AccessControl.authorizationCheck: #NOT_REQUIRED
+@EndUserText.label: 'Cds View spfli'
+@Metadata.ignorePropagatedAnnotations: true
+define view entity ZCDSSPFLI_B03 as select from spfli
+{
+    key carrid as Carrid,
+    key connid as Connid,
+    countryfr as Countryfr,
+    cityfrom as Cityfrom,
+    cityto as Cityto,
+    @Semantics.quantity.unitOfMeasure: 'Distid'
+    distance as Distance,
+    distid as Distid
+    
+}
+```
+</br>
 </br>
 </br>
 </br>
@@ -730,4 +751,12 @@ define view entity Z03_R_Employee as select from z03employ
     local_last_changed_at as LocalLastChangedAt,
     last_changed_at as LastChangedAt
 }
+```
+</br>
+</br>
+</br>
+
+### 실습 4
+- 어노테이션 설정 실습
+```abap
 ```
