Update 2-02. 프로그래밍 코드 최적화(02.20).md

--- a/RAP/2-02. 프로그래밍 코드 최적화(02.20).md
+++ b/RAP/2-02. 프로그래밍 코드 최적화(02.20).md
@@ -428,6 +428,11 @@ define view ZCDSFLIGHT2_B03 as select from sflight
 </br>
 
 #### 3) 신문법
+
+<img width="524" height="384" alt="image" src="https://github.com/user-attachments/assets/167c1128-2498-4045-a9bc-a114a0b7c593" />
+
+<img width="522" height="352" alt="image" src="https://github.com/user-attachments/assets/d47cdd7e-579d-4383-bdc7-2c07325b0942" />
+
 ```abap
 @AbapCatalog.viewEnhancementCategory: [#NONE]
 @AccessControl.authorizationCheck: #NOT_REQUIRED
@@ -468,6 +473,7 @@ define view entity ZCDSSPFLI_B03 as select from spfli
 </br>
 
 <img width="285" height="154" alt="image" src="https://github.com/user-attachments/assets/fe126750-2d78-4629-9b19-9c13a8720060" />
+
 </br>
 </br>
 
