Update 2-02. 프로그래밍 코드 최적화(02.20).md

--- a/RAP/2-02. 프로그래밍 코드 최적화(02.20).md
+++ b/RAP/2-02. 프로그래밍 코드 최적화(02.20).md
@@ -737,6 +737,9 @@ ENDCLASS.
 
 ### 실습 3
 - CDS View 생성 실습
+
+<img width="840" height="441" alt="image" src="https://github.com/user-attachments/assets/a2cb609e-a20d-4c32-9388-606806149508" />
+
 ```abap
 @AbapCatalog.viewEnhancementCategory: [#NONE]
 @AccessControl.authorizationCheck: #NOT_REQUIRED
