Update 2-02. 프로그래밍 코드 최적화(02.20).md

--- a/RAP/2-02. 프로그래밍 코드 최적화(02.20).md
+++ b/RAP/2-02. 프로그래밍 코드 최적화(02.20).md
@@ -738,8 +738,6 @@ ENDCLASS.
 ### 실습 3
 - CDS View 생성 실습
 
-<img width="840" height="441" alt="image" src="https://github.com/user-attachments/assets/a2cb609e-a20d-4c32-9388-606806149508" />
-
 ```abap
 @AbapCatalog.viewEnhancementCategory: [#NONE]
 @AccessControl.authorizationCheck: #NOT_REQUIRED
@@ -767,5 +765,39 @@ define view entity Z03_R_Employee as select from z03employ
 
 ### 실습 4
 - 어노테이션 설정 실습
+
+<img width="840" height="441" alt="image" src="https://github.com/user-attachments/assets/382b4a54-706e-45bd-8447-78e627b2e6be" />
+
 ```abap
+@AbapCatalog: {
+    dataMaintenance: #RESTRICTED,
+    viewEnhancementCategory: [#NONE]
+}
+@AccessControl.authorizationCheck: #NOT_REQUIRED
+@EndUserText.label: 'Employee (Entity)'
+@Metadata.ignorePropagatedAnnotations: true
+@ObjectModel.usageType:{
+    serviceQuality: #D,
+    sizeCategory:   #M,
+    dataClass:      #MASTER
+}
+define view entity Z03_EMPLOYEE
+  as select from /lrn/employ_dep
+  {
+    key employee_id           as EmployeeId,
+        first_name            as FirstName,
+        last_name             as LastName,
+        birth_date            as BirthDate,
+        entry_date            as EntryDate,
+        department_id         as DepartmentId,
+        @Semantics.amount.currencyCode: 'CurrencyCode'
+        annual_salary as AnnualSalary,
+        @EndUserText.label: 'Currency Key'
+        currency_code as CurrencyCode,
+        created_by            as CreatedBy,
+        created_at            as CreatedAt,
+        local_last_changed_by as LocalLastChangedBy,
+        local_last_changed_at as LocalLastChangedAt,
+        last_changed_at       as LastChangedAt
+  }
 ```
