Update 2-02. 프로그래밍 코드 최적화(02.20).md

--- a/RAP/2-02. 프로그래밍 코드 최적화(02.20).md
+++ b/RAP/2-02. 프로그래밍 코드 최적화(02.20).md
@@ -1,4 +1,4 @@
-## <  핵심 개념 >
+<img width="726" height="233" alt="image" src="https://github.com/user-attachments/assets/0bd17b9a-2606-4951-9e39-ad6d0c0addac" />## <  핵심 개념 >
 - **1) ABAP Dictionary 및 CDS 객체 구조**
 - **2) SAP UI5 테마 커스터마이징 (TCODE - FIORI LAUNCHPAD : `/n/ui2/flp`), TCODE - 테마 : `/n/ui5/theme_designer`)**
 - **3) Eclipse에서 ABAP 패키지 생성 절차**
@@ -451,6 +451,63 @@ define view entity ZCDSSPFLI_B03 as select from spfli
     
 }
 ```
+</br>
+</br>
+</br>
+</br>
+
+## < CDS View Entity 어노테이션 생성 절차 >
+</br>
+
+#### 1) CDS OData 자동 Publish 설정
+- `@OData.publish: true` → CDS를 자동으로 OData 서비스로 생성
+- `@OData.entitySet.name: 'Flights'` → OData에서 사용할 엔티티셋 이름을 지정하는 설정
+```abap
+@AbapCatalog.sqlViewName: 'ZCDSFLT2_B03'
+@AbapCatalog.compiler.compareFilter: true
+@AbapCatalog.preserveKey: true
+@AccessControl.authorizationCheck: #NOT_REQUIRED
+@EndUserText.label: 'Flight CDS View 2'
+@Metadata.ignorePropagatedAnnotations: true
+
+@OData.publish: true
+@OData.entitySet.name: 'Flights'
+define view ZCDSFLIGHT2_B03 as select from sflight
+{
+    key carrid as Carrid,
+    key connid as Connid,
+    key fldate as Fldate,
+    
+    @Semantics.amount.currencyCode: 'Currency'
+    @EndUserText.label: 'myPrice'
+    price as Price,
+    @Semantics.currencyCode: true
+    currency as Currency,
+    planetype as Planetype,
+    seatsmax as Seatsmax,
+    seatsocc as Seatsocc,
+    @Semantics.amount.currencyCode: 'Currency'
+    paymentsum as Paymentsum
+}
+```
+</br>
+
+#### 2) 자동 생성된 CDS OData 서비스를 Gateway에 등록
+
+<img width="726" height="233" alt="image" src="https://github.com/user-attachments/assets/b69dbab0-fa69-49b9-a102-c6c61a8b4a94" />
+</br>
+</br>
+
+#### 3) OData 서비스를 로컬 패키지($TMP)로 등록하여 Gateway에 최종 활성화
+
+<img width="724" height="497" alt="image" src="https://github.com/user-attachments/assets/fb44f563-98a5-4e40-909a-82616640e726" />
+</br>
+</br>
+
+#### 4) Service Catalog에서 기술 서비스명으로 조회(Filter)하여 등록된 OData 서비스를 확인
+<img width="723" height="345" alt="image" src="https://github.com/user-attachments/assets/9a4e4f73-fb81-48cc-a56e-6928e240abbd" />
+
+
 </br>
 </br>
 </br>
