Update 2-02. 프로그래밍 코드 최적화(02.20).md

--- a/RAP/2-02. 프로그래밍 코드 최적화(02.20).md
+++ b/RAP/2-02. 프로그래밍 코드 최적화(02.20).md
@@ -505,7 +505,21 @@ define view ZCDSFLIGHT2_B03 as select from sflight
 </br>
 
 #### 4) Service Catalog에서 기술 서비스명으로 조회(Filter)하여 등록된 OData 서비스를 확인
-<img width="723" height="345" alt="image" src="https://github.com/user-attachments/assets/9a4e4f73-fb81-48cc-a56e-6928e240abbd" />
+<img width="629" height="300" alt="image" src="https://github.com/user-attachments/assets/fd64480f-703f-44d3-94de-1251aaa14b54" />
+</br>
+</br>
+
+#### 5) 등록된 OData 서비스를 선택한 후 SAP Gateway Client에서 테스트
+
+<img width="730" height="362" alt="image" src="https://github.com/user-attachments/assets/78873ce1-ffab-411f-a77c-726db8f9c0ea" />
+</br>
+</br>
+
+#### 6) Gateway Client에서 EntitySet(Flights)을 선택하고 `$metadata` 를 호출하여 OData 서비스 메타데이터를 확인
+
+<img width="695" height="237" alt="image" src="https://github.com/user-attachments/assets/77a8ded1-7abc-4291-b22c-b7076b203ffc" />
+
+<img width="697" height="229" alt="image" src="https://github.com/user-attachments/assets/e1cc289c-f963-469a-b8e3-63d477cc9c4e" />
 
 
 </br>
