Update 2-02. 프로그래밍 코드 최적화(02.20).md

--- a/RAP/2-02. 프로그래밍 코드 최적화(02.20).md
+++ b/RAP/2-02. 프로그래밍 코드 최적화(02.20).md
@@ -456,7 +456,7 @@ define view entity ZCDSSPFLI_B03 as select from spfli
 </br>
 </br>
 
-## < CDS View Entity 어노테이션 생성 절차 >
+## < CDS OData 서비스 생성 및 활성화 절차 >
 </br>
 
 #### 1) CDS OData 자동 Publish 설정
@@ -493,6 +493,7 @@ define view ZCDSFLIGHT2_B03 as select from sflight
 </br>
 
 #### 2) 자동 생성된 CDS OData 서비스를 Gateway에 등록
+- TCODE : `/n/iwfnd/maint_service`
 
 <img width="726" height="233" alt="image" src="https://github.com/user-attachments/assets/b69dbab0-fa69-49b9-a102-c6c61a8b4a94" />
 </br>
@@ -872,3 +873,33 @@ define view entity Z03_EMPLOYEE
         last_changed_at       as LastChangedAt
   }
 ```
+</br>
+</br>
+</br>
+
+### 실습 5
+- CDS OData 서비스 생성 및 테스트 실습
+</br>
+
+#### 1) SCARR 테이블 기반 CDS View OData 자동 Publish 설정
+```abap
+@AbapCatalog.sqlViewName: 'ZCDSSCARR_B03_S'
+@AbapCatalog.compiler.compareFilter: true
+@AbapCatalog.preserveKey: true
+@AccessControl.authorizationCheck: #NOT_REQUIRED
+@EndUserText.label: 'Scarr SCDS View'
+@Metadata.ignorePropagatedAnnotations: true
+
+@OData.publish: true
+@OData.entitySet.name: 'Scarr'
+define view ZCDSSCARR_B03 as select from scarr
+{
+    key carrid as Carr_Id,
+    carrname as Carr_Name,
+    currcode,
+    url 
+}
+```
+</br>
+
+#### 1) SCARR 테이블 기반 CDS View OData 자동 Publish 설정
