Update 2-02. 프로그래밍 코드 최적화(02.20).md

--- a/RAP/2-02. 프로그래밍 코드 최적화(02.20).md
+++ b/RAP/2-02. 프로그래밍 코드 최적화(02.20).md
@@ -521,7 +521,12 @@ define view ZCDSFLIGHT2_B03 as select from sflight
 <img width="695" height="237" alt="image" src="https://github.com/user-attachments/assets/77a8ded1-7abc-4291-b22c-b7076b203ffc" />
 
 <img width="697" height="229" alt="image" src="https://github.com/user-attachments/assets/e1cc289c-f963-469a-b8e3-63d477cc9c4e" />
+</br>
+</br>
 
+#### 7) Gateway Client의 `$metadata` 에서 `@EndUserText.label: 'myPrice'` 가 OData 메타데이터에 정상 반영되었는지 확인
+
+<img width="940" height="435" alt="image" src="https://github.com/user-attachments/assets/88d80c2f-1242-431e-96d1-10e80d613fb8" />
 
 </br>
 </br>
