Update 2-02. 프로그래밍 코드 최적화(02.20).md

--- a/RAP/2-02. 프로그래밍 코드 최적화(02.20).md
+++ b/RAP/2-02. 프로그래밍 코드 최적화(02.20).md
@@ -907,4 +907,15 @@ define view ZCDSSCARR_B03 as select from scarr
 ```
 </br>
 
-#### 1) SCARR 테이블 기반 CDS View OData 자동 Publish 설정
+#### 2) 자동 생성된 SCARR CDS OData 서비스를 Gateway에 추가
+
+<img width="790" height="222" alt="image" src="https://github.com/user-attachments/assets/ad62269a-7c01-449f-9ff4-55001cafdf10" />
+</br>
+
+#### 3) CDS OData 서비스를 로컬 패키지($TMP)로 지정하여 Gateway에 등록
+
+<img width="729" height="508" alt="image" src="https://github.com/user-attachments/assets/8dac0b44-3342-4018-948f-16c5ce82c71f" />
+</br>
+
+#### 4) Gateway Client에서 SCARR CDS OData 서비스의 `$metadata` 를 호출하여 메타데이터 응답 확인
+<img width="853" height="454" alt="image" src="https://github.com/user-attachments/assets/26e7005b-c82b-4262-afaf-b5b076258271" />
