Update 2-02. 프로그래밍 코드 최적화(02.20).md

--- a/RAP/2-02. 프로그래밍 코드 최적화(02.20).md
+++ b/RAP/2-02. 프로그래밍 코드 최적화(02.20).md
@@ -371,24 +371,25 @@ birth_date as BirthDate,
 </br>
 
 ```abap
-@AbapCatalog.viewEnhancementCategory: [#NONE]
-@AccessControl.authorizationCheck: #NOT_REQUIRED
-@EndUserText.label: 'Flight CDS View'
-@Metadata.ignorePropagatedAnnotations: true
-define view entity ZCDSFLIGHT_B03 as select from sflight
+@AbapCatalog.viewEnhancementCategory: [#NONE]          " View 확장(Enhancement) 허용 안 함
+@AccessControl.authorizationCheck: #NOT_REQUIRED       " 권한 체크 없이 조회 가능
+@EndUserText.label: 'Flight CDS View'                  " 화면에 표시될 설명 이름
+@Metadata.ignorePropagatedAnnotations: true            " 하위 객체 Annotation 전파 무시
+
+define view entity ZCDSFLIGHT_B03 as select from sflight  " View Entity(신문법) 방식으로 sflight 기반 CDS 생성
 {
-    key carrid as Carrid,
-    key connid as Connid,
-    key fldate as Fldate,
+    key carrid as Carrid,                              " 항공사 ID 기본키
+    key connid as Connid,                              " 연결 ID 기본키
+    key fldate as Fldate,                              " 비행 날짜 기본키
     
-    @Semantics.amount.currencyCode: 'Currency'
-    price as Price,
-    currency as Currency,
-    planetype as Planetype,
-    seatsmax as Seatsmax,
-    seatsocc as Seatsocc,
-    @Semantics.amount.currencyCode: 'Currency'
-    paymentsum as Paymentsum
+    @Semantics.amount.currencyCode: 'Currency'         " 금액 필드이며 통화는 Currency 컬럼 기준
+    price as Price,                                    " 가격
+    currency as Currency,                              " 통화 코드
+    planetype as Planetype,                            " 비행기 기종
+    seatsmax as Seatsmax,                              " 최대 좌석 수
+    seatsocc as Seatsocc,                              " 예약 좌석 수
+    @Semantics.amount.currencyCode: 'Currency'         " 금액 필드이며 통화는 Currency 기준
+    paymentsum as Paymentsum                           " 총 결제 금액
 }
 ```
 </br>
@@ -401,27 +402,31 @@ define view entity ZCDSFLIGHT_B03 as select from sflight
 
 
 ```abap
-@AbapCatalog.sqlViewName: 'ZCDSFLT2_B03'
-@AbapCatalog.compiler.compareFilter: true
-@AbapCatalog.preserveKey: true
-@AccessControl.authorizationCheck: #NOT_REQUIRED
-@EndUserText.label: 'Flight CDS View 2'
-@Metadata.ignorePropagatedAnnotations: true
-define view ZCDSFLIGHT2_B03 as select from sflight
+@AbapCatalog.sqlViewName: 'ZCDSFLT2_B03'          " DB에 생성될 SQL View 이름 (구문법에서 필수)
+@AbapCatalog.compiler.compareFilter: true         " WHERE 조건 비교를 최적화
+@AbapCatalog.preserveKey: true                    " 원본 테이블의 Key 유지
+@AccessControl.authorizationCheck: #NOT_REQUIRED  " 권한 체크 없이 조회 가능
+@EndUserText.label: 'Flight CDS View 2'           " 화면에 표시될 설명 이름
+@Metadata.ignorePropagatedAnnotations: true       " 하위 객체 Annotation 전파 무시
+
+define view ZCDSFLIGHT2_B03 as select from sflight  " 구문법(Classic CDS) 방식으로 sflight 기반 View 생성
 {
-    key carrid as Carrid,
-    key connid as Connid,
-    key fldate as Fldate,
+    key carrid as Carrid,                         " 항공사 ID 기본키
+    key connid as Connid,                         " 연결 ID 기본키
+    key fldate as Fldate,                         " 비행 날짜 기본키
     
-    @Semantics.amount.currencyCode: 'Currency'
-    price as Price,
-    @Semantics.currencyCode: true
-    currency as Currency,
-    planetype as Planetype,
-    seatsmax as Seatsmax,
-    seatsocc as Seatsocc,
-    @Semantics.amount.currencyCode: 'Currency'
-    paymentsum as Paymentsum
+    @Semantics.amount.currencyCode: 'Currency'    " 금액 필드이며 통화는 Currency 컬럼 기준
+    price as Price,                               " 가격
+
+    @Semantics.currencyCode: true                 " 이 필드는 통화 코드임을 명시
+    currency as Currency,                         " 통화 코드
+
+    planetype as Planetype,                       " 비행기 기종
+    seatsmax as Seatsmax,                         " 최대 좌석 수
+    seatsocc as Seatsocc,                         " 예약 좌석 수
+
+    @Semantics.amount.currencyCode: 'Currency'    " 금액 필드이며 통화는 Currency 기준
+    paymentsum as Paymentsum                      " 총 결제 금액
 }
 ```
 
