--- a/RAP/2-02. 프로그래밍 코드 최적화(02.20).md
+++ b/RAP/2-02. 프로그래밍 코드 최적화(02.20).md
@@ -1,9 +1,9 @@
 ## <  핵심 개념 >
-- **1) ABAP Dictionary 및 CDS 객체 구조**
-- **2) SAP UI5 테마 커스터마이징 (TCODE - FIORI LAUNCHPAD : `/n/ui2/flp`), TCODE - 테마 : `/n/ui5/theme_designer`)**
-- **3) Eclipse에서 ABAP 패키지 생성 절차**
-- **4) Eclipse에서 Domain 생성 절차**
-- **5) `Ctrl + Shift + F` : Pretty Print**
+- **1) ABAP 타입 정의 위치별 차이와 Nested/Flat 구조 비교**
+- **2) Eclipse에서 Type 생성 절차**
+- **3) Eclipse에서 CDS View / View Entity 생성 절차**
+- **4) CDS View / View Entity 어노테이션 설정**
+- **5) CDS SAP GUI OData 서비스 생성 및 활성화 절차**
 </br>
 </br>
 
