--- a/RAP/2-01. 프로그래밍 코드 최적화(02.19).md
+++ b/RAP/2-01. 프로그래밍 코드 최적화(02.19).md
@@ -4,6 +4,7 @@
 - **3) Eclipse에서 ABAP 패키지 생성 절차**
 - **4) Eclipse에서 Domain 생성 절차**
 - **5) Eclipse에서 Data Element 생성 절차**
+- **6) `Ctrl + Shift + F` : Pretty Print**
 </br>
 </br>
 
