--- a/RAP/5-4. Eclipse 총정리.md
+++ b/RAP/5-4. Eclipse 총정리.md
@@ -7,6 +7,7 @@
 - **3) Eclipse에서 ABAP 패키지 생성 절차**
 - **4) Eclipse에서 Domain 생성 절차**
 - **5) Eclipse에서 Data Element 생성 절차**
+- **6) `Ctrl + Shift + F` : Pretty Print**
 </br>
 </br>
 
@@ -529,11 +530,8 @@ define table z03employ {
 ```
 - Size Category로 테이블의 예상 데이터 양(레코드 수)을 기준으로 저장 공간 크기를 지정
 <img width="395" height="331" alt="image" src="https://github.com/user-attachments/assets/0b422c89-8b75-4b09-a40e-6d5cd2d4612e" />
-
 </br>
 </br>
 </br>
 </br>
 </br>
-
-
