Update 2-01. 프로그래밍 코드 최적화(02.19).md

--- a/RAP/2-01. 프로그래밍 코드 최적화(02.19).md
+++ b/RAP/2-01. 프로그래밍 코드 최적화(02.19).md
@@ -4,7 +4,11 @@
 - **3) Eclipse에서 ABAP 패키지 생성 절차**
 - **4) Eclipse에서 Domain 생성 절차**
 - **5) Eclipse에서 Data Element 생성 절차**
-- **6) `Ctrl + Shift + F` : Pretty Print**
+- **6) Eclipse에서 Database Table 생성 절차**
+- **7) Eclipse에서 Structure 생성 절차**
+- **8) Eclipse에서 ABAP 클래스 복사 절차**
+- **9) 테이블 구조 변경 오류**
+- **10) `Ctrl + Shift + F` : Pretty Print**
 </br>
 </br>
 
